--- a/MinhasViagens/MinhasViagens/Storyboards/Base.lproj/Main.storyboard
+++ b/MinhasViagens/MinhasViagens/Storyboards/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="7oL-2S-1y5">
                             <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
-                                <segue destination="NNB-Pl-ANC" kind="show" id="bSO-DW-qkc"/>
+                                <segue destination="NNB-Pl-ANC" kind="show" identifier="presentMap" id="bSO-DW-qkc"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
